<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Step1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="blank">Blank</string>
    <string name="username2">Username:</string>
    <string name="title_activity_index">Index</string>
    <string name="rating">Rating:</string>
    <string name="posts">Posts:</string>
    <string name="newPost">New Post</string>
    <string name="publicPost">Public</string>
    <string name="browse">Browse</string>
    <string name="users">User</string>
    <string name="myPosts">My Posts</string>
    <string name="upload">Upload Photo</string>
    <string name="search_by_title">Search By Title</string>
    <string name="search">Search</string>
    <string name="latest">Latest</string>
    <string name="oldest">Oldest</string>
    <string name="popular">Popular</string>
    <string name="sorting">Sorting:</string>
    <string name="title_activity_new_post">New Post</string>
    <string name="start">START</string>
    <string name="easy">Easy</string>
    <string name="of">Of</string>
    <string name="medium">Medium</string>
    <string name="newstep">Start New Step</string>
    <string name="comment">Comment</string>
    <string name="hard">Hard</string>
    <string name="postName">Post Name</string>
    <string name="privatePost">Private</string>
    <string name="difficulty">Difficulty (1-10)</string>
    <string name="title_activity_browse">Browse</string>
    <string name="category">Category:</string>
    <string name="step">Step</string>
    <string name="comments">Comments:</string>
    <string name="picture">Take Picture</string>
    <string name="toolbox">Step1</string>
    <string name="album_name">CameraSample</string>
    <string name="index">Index</string>
    <string name="commentText">Enter a Comment</string>
    <string name="returnPost">Return to Post</string>
    <string name="returnStep">Return to Step</string>
    <string name="category_prompt">Pick a Category</string>
    <string name="subject">Subject</string>
    <string name="recipient">Recipient</string>
    <string name="messages">Messages</string>
    <string name="body">Message Body</string>
    <string name="reply">Reply</string>
    <string name="goback">Return</string>
    <string name="from">From: </string>
    <string name="subject4">Subject: </string>
    <string name="newmessage">New Message</string>
    <string name="sendmessage">Send Message</string>

    <string-array name="category_arrays">
        <item>Computers and Electronics</item>
        <item>Hobbies and Crafts</item>
        <item>Cars and Other Vehicles</item>
        <item>Sports</item>
        <item>Home and Garden</item>
        <item>Educational</item>
        <item>Personal Care and Style</item>
        <item>Arts</item>
        <item>Health</item>
        <item>Finance, Business and Legal</item>
        <item>Food, Kitchen and Appliances</item>
        <item>Other</item>
    </string-array>
    <string-array name="Sorting">
        <item>Popular</item>
        <item>Latest</item>
        <item>Oldest</item>
    </string-array>

    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="title_activity_view_post">ViewPost</string>
    <string name="title_activity_view_step">ViewStep</string>
    <string name="title_activity_create_step">CreateStep</string>
    <string name="title_activity_my_posts">MyPosts</string>
    <string name="title_activity_spash_screen">SpashScreen</string>
    <string name="logout">log out</string>
    <string name="entertext">Enter Text Here!</string>
    <string name="finish">Finish!</string>
    <string name="rotate">Rotate Picture</string>
    <string name="browsepics">Browse</string>
    <string name="title_activity_step_comments">StepComments</string>
    <string name="title_activity_compose_message">ComposeMessage</string>
    <string name="title_activity_inbox">Inbox</string>
    <string name="title_activity_view_email">ViewEmail</string>

</resources>
