<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewPost" >

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/newPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newPost"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioButton
            android:id="@+id/privateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/privatePost" />

        <RadioButton
            android:id="@+id/publicButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/publicPost" />
    </RadioGroup>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/difficulty"
        android:text="@string/start" />

    <EditText
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/difficulty" />

    <EditText
        android:id="@+id/postName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/difficulty"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/postName" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/postName"
        android:layout_alignLeft="@+id/postName"
        android:entries="@array/category_arrays"
        android:prompt="@string/category_prompt" />

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/category"
        android:layout_alignParentLeft="true"
        android:text="@string/category"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>