<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewPost" >

    <Button
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view_first_step"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/view_first_step"
        android:layout_marginBottom="67dp"
        android:text="@string/comment" />

    <Button
        android:id="@+id/view_first_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/comment"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/view1"
        android:layout_marginBottom="35dp"
        android:text="@string/newstep" />

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="#000000" />

    <TextView
        android:id="@+id/post_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/post_rating"
        android:layout_below="@+id/post_name"
        android:layout_marginTop="33dp"
        android:text="@string/users"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/post_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/postName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/post_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/post_difficulty"
        android:layout_below="@+id/post_difficulty"
        android:layout_marginTop="18dp"
        android:text="@string/rating"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/post_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/view1"
        android:layout_below="@+id/post_user"
        android:layout_marginTop="27dp"
        android:text="@string/difficulty"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/post_user"
        android:layout_alignParentLeft="true"
        android:text="@string/username2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/post_difficulty"
        android:layout_alignBottom="@+id/post_difficulty"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/difficulty"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/post_rating"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/rating"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
