<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StepComments" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:orientation="vertical" >
    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/commentButton"
        android:layout_alignParentTop="true" >

    </ListView>

    <EditText
        android:id="@+id/commentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/commentButton"
        android:layout_alignLeft="@+id/listView1"
        android:layout_toLeftOf="@+id/commentButton"
        android:hint="@string/commentText"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/commentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/indexButton"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="56dp"
        android:text="@string/comment" />

    <Button
        android:id="@+id/indexButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/commentText"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/linearLayout1"
        android:text="@string/index" />

    <Button
        android:id="@+id/browseButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/indexButton"
        android:layout_alignBottom="@+id/indexButton"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentRight="true"
        android:text="@string/browse" />

    <Button
        android:id="@+id/returnStepButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/indexButton"
        android:layout_alignLeft="@+id/indexButton"
        android:layout_alignRight="@+id/browseButton2"
        android:text="@string/returnStep" />

</RelativeLayout>