<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MyPosts" >

    <QuickContactBadge
        android:id="@+id/quickContactBadge1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp" />

    <View
        android:id="@+id/view1"
        android:layout_width="1dip"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/username"
        android:background="#000000" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/numPostsTitle"
        android:layout_alignLeft="@+id/username"
        android:layout_marginBottom="80dp"
        android:text="@string/rating"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/quickContactBadge1"
        android:layout_below="@+id/quickContactBadge1"
        android:layout_marginTop="69dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/numPostsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/view1"
        android:layout_alignLeft="@+id/rating"
        android:layout_marginBottom="68dp"
        android:text="@string/posts"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/numPosts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/numPostsTitle"
        android:layout_alignBottom="@+id/numPostsTitle"
        android:layout_toRightOf="@+id/quickContactBadge1"
        android:text="@string/blank" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/view1"
        android:layout_centerHorizontal="true"
        android:text="@string/previous" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentRight="true"
        android:text="@string/next" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignTop="@+id/quickContactBadge1"
        android:layout_marginTop="18dp"
        android:orientation="vertical" >

    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/numPosts"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button2"
        android:layout_alignTop="@+id/view1" >

    </ListView>

</RelativeLayout>