<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/username1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/numPostsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/password1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

    </TableRow>

	<TableRow android:id="@+id/tableRow4"
	     android:layout_width="wrap_content"
	    android:layout_height="wrap_content" > 

		<Button
		    android:id="@+id/Button01"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/sign_in" />

		
	   

	     
	</TableRow>
	
	<View
        android:layout_width="fill_parent"
        android:layout_height="60dp">
    	</View>
	

	<TableRow
	    android:id="@+id/tableRow5"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >
	    
	    
	   
		
		<TextView
	    android:id="@+id/username"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/register"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

		

		

	</TableRow>

	<TableRow
	    android:id="@+id/tableRow6"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >
		
		<TextView
	    android:id="@+id/postsTitle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/username"
	    android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <EditText
            android:id="@+id/username2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10" >

            <requestFocus />
        </EditText> 
	</TableRow>

	<TableRow
	    android:id="@+id/tableRow7"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >
	    
	    <TextView
	    android:id="@+id/password2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/password"
	    android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <EditText
            android:id="@+id/passwordfield2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />
	</TableRow>

	<TableRow
	    android:id="@+id/tableRow8"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >
	    <TextView
	    android:id="@+id/verifyPassword"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/verify_password"
	    android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <EditText
            android:id="@+id/verifypasswordfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

		</TableRow>

	<TableRow
	    android:id="@+id/tableRow9"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >

		<Button
		    android:id="@+id/registerButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/register" />

	</TableRow>

</TableLayout>
